--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.3",
     "@types/styled-components": "^5.1.26",
+    "axios": "^1.3.4",
     "babel-plugin-styled-components": "^2.0.7",
     "next": "12.2.5",
     "next-redux-wrapper": "^8.1.0",
