--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.3",
+    "@types/react-redux": "^7.1.25",
     "@types/styled-components": "^5.1.26",
     "axios": "^1.3.4",
     "babel-plugin-styled-components": "^2.0.7",
